--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,8 @@ ark-ed-on-mnt4-298 = { git = "https://github.com/arkworks-rs/curves", default-fe
 ark-ed-on-bls12-381 = { git = "https://github.com/arkworks-rs/curves", default-features = false }
 ark-mnt4-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve", "r1cs" ] }
 ark-mnt6-298 = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }
+ark-pallas = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "curve", "r1cs" ] }
+ark-vesta = { git = "https://github.com/arkworks-rs/curves", default-features = false, features = [ "r1cs" ] }
 
 rand = { version = "0.7", default-features = false  }
 rand_chacha = { version = "0.2.1", default-features = false }
@@ -52,7 +54,7 @@ rand_xorshift = { version = "0.2" }
 
 [features]
 default = ["std"]
-std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-serialize/std", "ark-nonnative-field/std", "ark-poly-commit/std", "ark-nonnative-field/std", "ark-marlin/std", "ark-r1cs-std/std", "ark-relations/std", "ark-groth16/std", "ark-gm17/std" ]
+std = [ "ark-ff/std", "ark-ec/std", "ark-poly/std", "ark-std/std", "ark-serialize/std", "ark-nonnative-field/std", "ark-poly-commit/std", "ark-nonnative-field/std", "ark-marlin/std", "ark-r1cs-std/std", "ark-relations/std", "ark-groth16/std", "ark-gm17/std", "ark-pallas/std", "ark-vesta/std" ]
 print-trace = [ "bench-utils/print-trace" ]
 
 ###############################################################################
